# ai_engineer_agentic

./: README.md  pyproject.toml
crew_prj/coderai/: README.md  pyproject.toml
crew_prj/coderai/output/: code_and_output.txt
crew_prj/coderai/src/coderai/: crew.py  main.py
crew_prj/debate/output/: decide.md  oppose.md  propose.md
crew_prj/debate/src/debate/: crew.py
crew_prj/debate/src/debate/config/: agents.yaml
crew_prj/financial_researcher/: pyproject.toml
crew_prj/financial_researcher/output/: report.md
crew_prj/financial_researcher/src/financial_researcher/: crew.py  main.py
crew_prj/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
crew_prj/stock_picker/output/: decision.md  research_report.json  trending_companies.json
crew_prj/stock_picker/src/stock_picker/: crew.py
deep_search/: email_agent.py
