[project]
name = "coderai"
version = "0.1.0"
description = "coderai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.7.2"
]

[project.scripts]
coderai = "coderai.main:run"
run_crew = "coderai.main:run"
train = "coderai.main:train"
replay = "coderai.main:replay"
test = "coderai.main:test"
run_with_trigger = "coderai.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
